substrate/frame/support/test/tests/runtime_ui/missing_pallets.stderr
error: Missing `#[frame::pallets]`
  --> tests/runtime_ui/missing_pallets.rs:19:1
   |
19 | mod runtime {
   | ^^^
